# white-elephant

./: .gitignore  LICENSE  README.md  RULES.md  index.html  pyproject.toml  simulator.js
src/: create_matrix_viz.py  white_elephant_sim.py
src/white_elephant/: __init__.py  matrix.py  simulation.py
