[project]
name = "white-elephant"
version = "0.1.0"
description = "Tools to simulate and visualize a White Elephant gift exchange."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Nathan Apple", email = "nathan.apple@gmail.com" },
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
